<resources>
    <string name="app_name">Quiz</string>
    <!--スタート画面-->
    <string name="start_title">4択クイズ</string>
    <string name="start_msg">クイズのカテゴリと問題数を選択してください</string>
    <string name="btn_start">クイズを開始します</string>
    <string-array name="quiz_category">
        <item>全て</item>
        <item>レトロゲーム</item>
        <item>アニメ</item>
        <item>漫画</item>
        <item>流行</item>
        <!--
        <item>全て</item>
        <item>北海道・東北</item>
        <item>関東</item>
        <item>中部</item>
        <item>近畿</item>
        <item>中国・四国</item>
        <item>九州</item>
        -->
    </string-array>

    <string-array name="quiz_count">
        <item>5</item>
        <item>10</item>
    </string-array>

    <!-- クイズ画面 -->
    <string name="question_label">問題文</string>
    <string name="count_label">%d問目</string>
    <string name="answer_label">選択肢</string>

    <!-- 結果画面 -->
    <string name="result_title">結果</string>
    <string name="result_score">%d問正解</string>
    <string name="result_count">/ %d問中</string>
    <string name="result_total_score">トータルスコア : %d</string>
    <string name="btn_return">もどる</string>
</resources>